style/main.css
/* ... */
.res-nightmode .link .arrow.upmod::before, .res-nightmode .link .arrow.upmod:hover::before,
.res-nightmode .reddit-link .arrow.upmod::before,
.res-nightmode .reddit-link .arrow.upmod:hover::before,
.res-nightmode .comment .arrow.upmod::before,
.res-nightmode .comment .arrow.upmod:hover::before,
.arrow.upmod::before,
.arrow.upmod:hover::before {
  background-color: #ff5722;
}

.res-nightmode .link .arrow.downmod::before, .res-nightmode .link .arrow.downmod:hover::before,
.res-nightmode .reddit-link .arrow.downmod::before,
.res-nightmode .reddit-link .arrow.downmod:hover::before,
.res-nightmode .comment .arrow.downmod::before,
.res-nightmode .comment .arrow.downmod:hover::before,
.arrow.downmod::before,
.arrow.downmod:hover::before {
  background-color: #3f51b5;
}

.arrow,
.arrow::before,
.arrow::after {
  height: 23px;
  width: 23px;
}

.arrow:hover::before {
  background-color: rgba(0, 0, 0, 0.38);
}

.arrow::before {
  position: absolute;
  content: " ";
  border-radius: 50%;
}

.arrow::before {
  z-index: -1;
  background-color: rgba(0, 0, 0, 0.12);
  -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
  -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
}

.arrow.upmod, .arrow.up {
  background-position: -55px -160px;
}

.arrow.upmod:focus::after, .arrow.up:focus::after {
  background-color: #ff5722;
}

.arrow.downmod, .arrow.down {
  background-position: -192px 0;
}

.arrow.downmod:focus::after, .arrow.down:focus::after {
  background-color: #3f51b5;
}

#noresults {
  padding: 16px;
}

.rank {
  display: none;
}

.res-nightmode #siteTable {
  background-color: #424242;
}

.res-nightmode #siteTable .score.unvoted {
  color: rgba(255, 255, 255, 0.5) !important;
}

.res-nightmode #siteTable > .thing {
  border-bottom: 1px solid rgba(255, 255, 255, 0.12) !important;
}

.res-nightmode #siteTable > .thing.RES-keyNav-activeThing {
  background-color: #212121 !important;
}

.res-nightmode #siteTable > .thing .title {
  color: #2196f3 !important;
}

.res-nightmode #siteTable > .thing .title:hover {
  color: #64b5f6 !important;
}

.res-nightmode #siteTable > .thing .title:active {
  color: #1976d2 !important;
}

.res-nightmode #siteTable > .thing .title:visited {
  color: #9575cd !important;
}

.res-nightmode #siteTable > .thing .tagline {
  color: #fff !important;
}

.res-nightmode #siteTable > .thing .domain,
.res-nightmode #siteTable > .thing .domain a {
  color: rgba(255, 255, 255, 0.7);
}

.res-nightmode #siteTable > .thing .buttons li a {
  color: #fff;
}

#siteTable {
  border-radius: 2px;
  background-color: #fff;
  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12) !important;
}

#siteTable .score.unvoted {
  color: rgba(0, 0, 0, 0.38);
}

#siteTable .score.likes {
  color: #ff5722;
}

#siteTable .score.dislikes {
  color: #3f51b5;
}

#siteTable > .likes .score,
#siteTable > .dislikes .score,
#siteTable > .thing .score {
  position: relative;
  height: 100%;
  padding: 3px 0;
  font-size: 14px;
  line-height: 1;
}

#siteTable > .thing {
  height: auto !important;
  margin: 0;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12) !important;
}

#siteTable > .thing.RES-keyNav-activeThing {
  background-color: whitesmoke;
}

#siteTable > .thing .entry.RES-keyNav-activeElement {
  background-color: transparent !important;
}

#siteTable > .thing .title {
  color: #2196f3;
  line-height: 1.35;
  margin: 0;
}

#siteTable > .thing .title:hover {
  color: #64b5f6;
}

#siteTable > .thing .title:active {
  color: #1976d2;
}

#siteTable > .thing .title:visited {
  color: #9575cd;
}

#siteTable > .thing .tagline {
  color: rgba(0, 0, 0, 0.87);
}

#siteTable > .thing .domain,
#siteTable > .thing .domain a {
  color: rgba(0, 0, 0, 0.54);
}

#siteTable > .thing .buttons li a {
  color: rgba(0, 0, 0, 0.87);
}

#siteTable > .thing .buttons li:not(.first):not(:first-child) {
  opacity: 0;
}

#siteTable > .thing:hover .buttons li:not(.first):not(:first-child) {
  opacity: 1;
}

.link.last-clicked {
  border-top-style: none;
  border-right-style: none;
  border-left-style: none;
}

.thing .link .score.likes {
  color: #ff5722;
}

.thing .link .score.dislikes {
  color: #3f51b5;
}

.domain,
.approval-checkmark {
  float: right;
}

.self .expanded ~ .expando .usertext-body {
  -webkit-animation: 0.2s slide-down cubic-bezier(0.4, 0, 0.2, 1) forwards;
  -moz-animation: 0.2s slide-down cubic-bezier(0.4, 0, 0.2, 1) forwards;
  animation: 0.2s slide-down cubic-bezier(0.4, 0, 0.2, 1) forwards;
}

.tagline,
.flat-list.buttons {
  font-size: 12px;
}

.tagline {
  margin: 8px 0;
}

.res-nightmode .link .usertext-body .md {
  border-color: #fff;
}

.link .usertext-body .md {
  background-color: #fafafa;
  border-color: rgba(0, 0, 0, 0.87);
  border-radius: 2px;
}

.stamp {
  padding: 0;
  border: 0 !important;
}

.entry .buttons li.nsfw-stamp,
.nsfw-stamp acronym {
  border: 0 !important;
  border-radius: 2px;
  background-color: #ff5252;
  color: #fff;
  font-size: 12px;
  font-weight: bold;
  line-height: 0;
  padding: 0 2px;
}

.error {
  color: #de3726;
}

.entry {
  overflow: visible;
}

.thing[data-type="link"] .entry {
  margin-left: 133px;
}

.flat-list.buttons {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
}

.flat-list.buttons li {
  height: 20px;
  line-height: 18px;
}

.flat-list.buttons li.first {
  flex: 1 1 auto;
}

.flat-list.buttons li:not(.first) {
  flex: 0 1 auto;
}

.flat-list.buttons li:not(.first) a {
  display: inline-block;
  background-repeat: no-repeat;
  text-decoration: none;
}
/* ... */

